PUT methods for system and streamapp api
