# server/api/api_stream_app.py
@@ -124,7 +124,7 @@ def stream_per_system(user_id, system_url, stream_name):
     return jsonify({"stream_apps": streams})
 
 
-@api_stream_app.route(f"{prefix}/stream_apps/<string:user_id>/<string:system_url>", methods=['POST'])
+@api_stream_app.route(f"{prefix}/stream_apps/<string:user_id>/<string:system_url>", methods=['POST', 'PUT'])
 def create_stream_app(user_id, system_url):
     """
     Create a stream app by sending a json like:
@@ -172,6 +172,7 @@ def create_stream_app(user_id, system_url):
         return jsonify({"value": msg, "url": fct, "status_code": 403}), 403
 
     # 4) create the stream app or warn if it exists.
+    # If the stream-app exists and the method is POST, return without change. If the method is PUT, overwrite
     stream_name = new_stream_app["name"]
     result_proxy = conn.execute(
         f"SELECT source_system, name FROM stream_apps "
@@ -198,10 +199,12 @@ def create_stream_app(user_id, system_url):
                         "datetime": get_datetime(),
                         "description": new_stream_app.get("description", "")}]
     if len(stream_apps) > 0:
-        engine.dispose()
-        msg = f"The stream app with name '{stream_name}' for system '{system_name}' already exists."
-        app.logger.warning(f"{fct}: {msg}")
-        return jsonify({"value": msg, "url": fct, "status_code": 208}), 208
+        # If the stream-app exists and the method is POST, return without change. If the method is PUT, overwrite
+        if request.method == "POST":
+            engine.dispose()
+            msg = f"The stream app with name '{stream_name}' for system '{system_name}' already exists."
+            app.logger.warning(f"{fct}: {msg}")
+            return jsonify({"value": msg, "url": fct, "status_code": 208}), 208
     else:
         query = db.insert(app.config["tables"]["stream_apps"])
         conn.execute(query, new_stream_apps)
